Adding core info.

--- a/aqms/src/aqp_top.ucf
+++ b/aqms/src/aqp_top.ucf
@@ -100,14 +100,38 @@ NET "hc2[8]"            LOC = P85;
 
 NET "printer_in" PULLUP;
 
-NET "ebus_d[0]" PULLUP;
-NET "ebus_d[1]" PULLUP;
-NET "ebus_d[2]" PULLUP;
-NET "ebus_d[3]" PULLUP;
-NET "ebus_d[4]" PULLUP;
-NET "ebus_d[5]" PULLUP;
-NET "ebus_d[6]" PULLUP;
-NET "ebus_d[7]" PULLUP;
+NET "ebus_reset_n"  PULLUP;
+NET "ebus_a[0]"     PULLUP;
+NET "ebus_a[1]"     PULLUP;
+NET "ebus_a[2]"     PULLUP;
+NET "ebus_a[3]"     PULLUP;
+NET "ebus_a[4]"     PULLUP;
+NET "ebus_a[5]"     PULLUP;
+NET "ebus_a[6]"     PULLUP;
+NET "ebus_a[7]"     PULLUP;
+NET "ebus_a[8]"     PULLUP;
+NET "ebus_a[9]"     PULLUP;
+NET "ebus_a[10]"    PULLUP;
+NET "ebus_a[11]"    PULLUP;
+NET "ebus_a[12]"    PULLUP;
+NET "ebus_a[13]"    PULLUP;
+NET "ebus_a[14]"    PULLUP;
+NET "ebus_a[15]"    PULLUP;
+NET "ebus_d[0]"     PULLUP;
+NET "ebus_d[1]"     PULLUP;
+NET "ebus_d[2]"     PULLUP;
+NET "ebus_d[3]"     PULLUP;
+NET "ebus_d[4]"     PULLUP;
+NET "ebus_d[5]"     PULLUP;
+NET "ebus_d[6]"     PULLUP;
+NET "ebus_d[7]"     PULLUP;
+NET "ebus_rd_n"     PULLUP;
+NET "ebus_wr_n"     PULLUP;
+NET "ebus_mreq_n"   PULLUP;
+NET "ebus_iorq_n"   PULLUP;
+NET "ebus_int_n"    PULLUP;
+NET "ebus_busreq_n" PULLUP;
+NET "ebus_busack_n" PULLUP;
 
 NET "hc1[0]" PULLUP;
 NET "hc1[1]" PULLUP;
@@ -127,11 +151,7 @@ NET "hc2[5]" PULLUP;
 NET "hc2[6]" PULLUP;
 NET "hc2[7]" PULLUP;
 
-NET "has_z80"       PULLUP;
-NET "ebus_int_n"    PULLUP;
-NET "ebus_busreq_n" PULLUP;
-NET "ebus_busack_n" PULLUP;
-NET "ebus_reset_n"  PULLUP;
+NET "has_z80" PULLUP;
 
 NET "sysclk"            IOSTANDARD = LVTTL;
 NET "ebus_reset_n"      IOSTANDARD = LVTTL;
