--- a/aq32/software/aq32rom/CMakeLists.txt
+++ b/aq32/software/aq32rom/CMakeLists.txt
@@ -41,16 +41,19 @@ target_compile_options(${PROJECT_NAME} PRIVATE -Os -g)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wshadow -Winit-self -Wfloat-conversion -Wdouble-promotion -Wmissing-include-dirs -Wlogical-op)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wno-unused-parameter -Wno-shadow)
 target_compile_options(${PROJECT_NAME} PRIVATE -fdata-sections -ffunction-sections)
-target_compile_options(${PROJECT_NAME} PRIVATE -march=rv32ima_zicsr_zicbom -mabi=ilp32 -ffreestanding)
+target_compile_options(${PROJECT_NAME} PRIVATE -march=rv32im -mabi=ilp32 -ffreestanding)
 
-target_link_options(${PROJECT_NAME} PRIVATE -march=rv32ima_zicsr -mabi=ilp32)
+target_link_options(${PROJECT_NAME} PRIVATE -march=rv32im -mabi=ilp32 -ffreestanding)
 target_link_options(${PROJECT_NAME} PRIVATE -nostdlib)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--gc-sections)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--print-memory-usage)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,-T${CMAKE_CURRENT_SOURCE_DIR}/default.ld)
 
+target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE /usr/riscv32-elf/include)
+target_link_directories(${PROJECT_NAME} PRIVATE /usr/riscv32-elf/lib/rv32im/ilp32)
+
 target_link_directories(${PROJECT_NAME} PRIVATE /usr/lib/gcc/riscv64-elf/14.1.0/rv32im/ilp32)
-target_link_libraries(${PROJECT_NAME} gcc)
+target_link_libraries(${PROJECT_NAME} c_nano gcc)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     .
@@ -58,9 +61,8 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 
 target_sources(${PROJECT_NAME} PRIVATE
     start.S
+    stubs.c
     main.c
     file_io.c
     console.c
-    lib.c
-    printf.c
 )
