--- a/aq32/software/bootrom/CMakeLists.txt
+++ b/aq32/software/bootrom/CMakeLists.txt
@@ -42,9 +42,9 @@ target_compile_options(${PROJECT_NAME} PRIVATE -Os -g)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wshadow -Winit-self -Wfloat-conversion -Wdouble-promotion -Wmissing-include-dirs -Wlogical-op)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wno-unused-parameter -Wno-shadow)
 target_compile_options(${PROJECT_NAME} PRIVATE -fdata-sections -ffunction-sections)
-target_compile_options(${PROJECT_NAME} PRIVATE -march=rv32ima_zicsr_zicbom -mabi=ilp32 -ffreestanding)
+target_compile_options(${PROJECT_NAME} PRIVATE -march=rv32im -mabi=ilp32 -ffreestanding)
 
-target_link_options(${PROJECT_NAME} PRIVATE -march=rv32ima_zicsr -mabi=ilp32)
+target_link_options(${PROJECT_NAME} PRIVATE -march=rv32im -mabi=ilp32 -ffreestanding)
 target_link_options(${PROJECT_NAME} PRIVATE -nostdlib)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--gc-sections)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--print-memory-usage)
