16-bit keyboard buf

--- a/aq32/fpga/src/.vscode/settings.json
+++ b/aq32/fpga/src/.vscode/settings.json
@@ -6,8 +6,7 @@
         "wrappers",
         "cpu",
         "mem",
-        "core_common",
-        "core_common/video"
+        "video"
     ],
     "verilog.linting.verilator.arguments": "-Wall verilator.vlt"
 }
