--- a/aq32/software/aq32rom/CMakeLists.txt
+++ b/aq32/software/aq32rom/CMakeLists.txt
@@ -66,4 +66,6 @@ target_sources(${PROJECT_NAME} PRIVATE
     editor/editor.c
     editor/menu.c
     editor/dialog.c
+    editor/ctrl_edit_field.c
+    editor/ctrl_file_list.c
 )
