--- a/aq32/software/aq32rom/CMakeLists.txt
+++ b/aq32/software/aq32rom/CMakeLists.txt
@@ -68,4 +68,5 @@ target_sources(${PROJECT_NAME} PRIVATE
     editor/dialog.c
     editor/ctrl_edit_field.c
     editor/ctrl_file_list.c
+    editor/editbuf.c
 )
