--- a/aq32/software/aq32rom/CMakeLists.txt
+++ b/aq32/software/aq32rom/CMakeLists.txt
@@ -62,6 +62,7 @@ target_sources(${PROJECT_NAME} PRIVATE
     lib/syscalls.c
     lib/screen.c
     lib/esp.c
+    lib/common.c
 
     editor/editor.c
     editor/menu.c
