--- a/aq32/software/basic/pcdev/CMakeLists.txt
+++ b/aq32/software/basic/pcdev/CMakeLists.txt
@@ -10,7 +10,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE DEBUG)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     .
-    lib
+    ../lib
     ../basic
     ..
 )
@@ -18,8 +18,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 target_sources(${PROJECT_NAME} PRIVATE
     main.c
     console.c
-
-    lib/common.c
+    ../lib/common.c
 
     ../editor/editbuf.c
 
