--- a/aq32/software/edit/CMakeLists.txt
+++ b/aq32/software/edit/CMakeLists.txt
@@ -51,23 +51,24 @@ target_link_options(${PROJECT_NAME} PRIVATE -Wl,-T${CMAKE_CURRENT_SOURCE_DIR}/de
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     .
-    lib
+    ../basic/lib
+    ../basic
 )
 
 target_sources(${PROJECT_NAME} PRIVATE
     main.c
 
-    lib/start.S
-    lib/syscalls.c
-    lib/screen.c
-    lib/esp.c
-    lib/common.c
-    lib/malloc.c
+    ../basic/lib/start.S
+    ../basic/lib/syscalls.c
+    ../basic/lib/screen.c
+    ../basic/lib/esp.c
+    ../basic/lib/common.c
+    ../basic/lib/malloc.c
 
-    editor/editor.c
-    editor/menu.c
-    editor/dialog.c
-    editor/ctrl_edit_field.c
-    editor/ctrl_file_list.c
-    editor/editbuf.c
+    ../basic/editor/ctrl_edit_field.c
+    ../basic/editor/ctrl_file_list.c
+    ../basic/editor/dialog.c
+    ../basic/editor/editbuf.c
+    ../basic/editor/editor.c
+    ../basic/editor/menu.c
 )
