--- a/aq32/software/basic/pcdev/CMakeLists.txt
+++ b/aq32/software/basic/pcdev/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(${PROJECT_NAME})
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wshadow -Winit-self -Wfloat-conversion -Wdouble-promotion -Wmissing-include-dirs -Wlogical-op)
 target_compile_options(${PROJECT_NAME} PRIVATE -O0 -g)
 
-target_compile_definitions(${PROJECT_NAME} PRIVATE DEBUG)
+target_compile_definitions(${PROJECT_NAME} PRIVATE PCDEV)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     .
