Reorganizing, cleaning up.

--- a/aq32/software/basic/pcdev/CMakeLists.txt
+++ b/aq32/software/basic/pcdev/CMakeLists.txt
@@ -35,6 +35,7 @@ target_sources(${PROJECT_NAME} PRIVATE
     ../basic/parser/parser.c
 
     ../basic/bytecode/bytecode.c
+    ../basic/bytecode/bytecode_variables.c
     ../basic/bytecode/bytecode_dump.c
     ../basic/bytecode/bytecode_math.c
     ../basic/bytecode/bytecode_string.c
