--- a/aq32/software/basic/CMakeLists.txt
+++ b/aq32/software/basic/CMakeLists.txt
@@ -88,6 +88,7 @@ target_sources(${PROJECT_NAME} PRIVATE
     basic/parser/parser.c
 
     basic/bytecode/bytecode.c
+    basic/bytecode/bytecode_variables.c
     basic/bytecode/bytecode_math.c
     basic/bytecode/bytecode_string.c
     basic/bytecode/bytecode_console_io.c
