--- a/aq32/software/edit/CMakeLists.txt
+++ b/aq32/software/edit/CMakeLists.txt
@@ -60,17 +60,17 @@ target_sources(${PROJECT_NAME} PRIVATE
 
     ../lib/start.S
     ../lib/syscalls.c
-    ../lib/screen.c
     ../lib/esp.c
     ../lib/common.c
     ../lib/malloc.c
-
+    
+    ../basic/editor/cmd_edit.c
+    ../basic/editor/cmd_file.c
     ../basic/editor/ctrl_edit_field.c
     ../basic/editor/ctrl_file_list.c
     ../basic/editor/dialog.c
     ../basic/editor/editbuf.c
     ../basic/editor/editor.c
     ../basic/editor/menu.c
-    ../basic/editor/cmd_file.c
-    ../basic/editor/cmd_edit.c
+    ../basic/editor/screen.c
 )
