--- a/aq32/software/boot/CMakeLists.txt
+++ b/aq32/software/boot/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(bootrom VERSION 0.1 LANGUAGES C CXX ASM)
+project(boot VERSION 0.1 LANGUAGES C CXX ASM)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(EXECNAME bootrom)
+set(EXECNAME boot)
 
 set(APPLE FALSE)
 set(CMAKE_C_COMPILER riscv-none-elf-gcc)
@@ -33,10 +33,7 @@ add_custom_command(
     COMMAND riscv-none-elf-objdump -x ${EXECNAME}.elf > dump_x.txt
     COMMAND riscv-none-elf-objdump -t ${EXECNAME}.elf | expand -t36 | tail -n +5 | sort > dump_symbols.txt
     COMMAND riscv-none-elf-size -A ${EXECNAME}.elf
-    COMMAND riscv-none-elf-size -G ${EXECNAME}.elf
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/genrom.py ${EXECNAME}.bin ${CMAKE_CURRENT_SOURCE_DIR}/../../fpga/src/bootrom.v
-    COMMAND echo -n "static const " > ${CMAKE_CURRENT_SOURCE_DIR}/../../../../emulator/fpga_cores/aq32/bootrom.h
-    COMMAND xxd -i ${EXECNAME}.bin >> ${CMAKE_CURRENT_SOURCE_DIR}/../../../../emulator/fpga_cores/aq32/bootrom.h
+    # COMMAND riscv-none-elf-size -G ${EXECNAME}.elf
 )
 
 target_compile_options(${PROJECT_NAME} PRIVATE -Os -g)
@@ -44,18 +41,28 @@ target_compile_options(${PROJECT_NAME} PRIVATE -Os -g)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wshadow -Winit-self -Wfloat-conversion -Wdouble-promotion -Wmissing-include-dirs -Wlogical-op)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wno-unused-parameter -Wno-shadow)
 target_compile_options(${PROJECT_NAME} PRIVATE -fdata-sections -ffunction-sections)
-target_compile_options(${PROJECT_NAME} PRIVATE -march=rv32im_zicsr -mabi=ilp32 -ffreestanding)
+target_compile_options(${PROJECT_NAME} PRIVATE -march=rv32im -mabi=ilp32 -ffreestanding -specs=nano.specs)
 
-target_link_options(${PROJECT_NAME} PRIVATE -march=rv32im_zicsr -mabi=ilp32 -ffreestanding)
-target_link_options(${PROJECT_NAME} PRIVATE -nostdlib)
+target_link_options(${PROJECT_NAME} PRIVATE -march=rv32im -mabi=ilp32 -ffreestanding -specs=nano.specs) # -u _printf_float)
+target_link_options(${PROJECT_NAME} PRIVATE -nostartfiles)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--gc-sections)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--print-memory-usage)
-target_link_options(${PROJECT_NAME} PRIVATE -Wl,-T${CMAKE_CURRENT_SOURCE_DIR}/default.ld)
+target_link_options(${PROJECT_NAME} PRIVATE -Wl,-T${CMAKE_CURRENT_SOURCE_DIR}/../lib/default.ld)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE NO_LIB_INIT)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     .
+    ../lib
 )
 
 target_sources(${PROJECT_NAME} PRIVATE
-    bootrom.S
+    main.c
+    
+    ../lib/start.S
+    ../lib/syscalls.c
+    ../lib/esp.c
+    ../lib/common.c
+    ../lib/malloc.c
+    ../lib/console.c
 )
