--- a/aq32/software/demo/CMakeLists.txt
+++ b/aq32/software/demo/CMakeLists.txt
@@ -47,20 +47,20 @@ target_link_options(${PROJECT_NAME} PRIVATE -march=rv32im -mabi=ilp32 -ffreestan
 target_link_options(${PROJECT_NAME} PRIVATE -nostartfiles)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--gc-sections)
 target_link_options(${PROJECT_NAME} PRIVATE -Wl,--print-memory-usage)
-target_link_options(${PROJECT_NAME} PRIVATE -Wl,-T${CMAKE_CURRENT_SOURCE_DIR}/default.ld)
+target_link_options(${PROJECT_NAME} PRIVATE -Wl,-T${CMAKE_CURRENT_SOURCE_DIR}/../lib/default.ld)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     .
-    ../basic/lib
+    ../lib
 )
 
 target_sources(${PROJECT_NAME} PRIVATE
     main.c
 
-    ../basic/lib/start.S
-    ../basic/lib/syscalls.c
-    ../basic/lib/screen.c
-    ../basic/lib/esp.c
-    ../basic/lib/common.c
-    ../basic/lib/malloc.c
+    ../lib/start.S
+    ../lib/syscalls.c
+    ../lib/esp.c
+    ../lib/common.c
+    ../lib/malloc.c
+    ../lib/console.c
 )
