Working on sound chip.

--- a/aq32/fpga/src/.vscode/settings.json
+++ b/aq32/fpga/src/.vscode/settings.json
@@ -6,7 +6,8 @@
         "wrappers",
         "cpu",
         "mem",
-        "video"
+        "video",
+        "audio"
     ],
     "verilog.linting.verilator.arguments": "-Wall verilator.vlt"
 }
