--- a/aq32/software/basic/pcdev/CMakeLists.txt
+++ b/aq32/software/basic/pcdev/CMakeLists.txt
@@ -22,6 +22,7 @@ target_sources(${PROJECT_NAME} PRIVATE
     buffers.c
 
     ../../lib/common.c
+    ../../lib/readline.c
 
     ../editor/editbuf.c
 
