--- a/aqplus/src/.vscode/settings.json
+++ b/aqplus/src/.vscode/settings.json
@@ -4,8 +4,7 @@
         ".",
         "aqp_shared",
         "wrappers",
-        "core_common",
-        "core_common/video"
+        "video"
     ],
     "verilog.linting.verilator.arguments": "-Wall verilator.vlt"
 }
